[gd_scene load_steps=4 format=3 uid="uid://dyoeot5dsvmva"]

[ext_resource type="Texture2D" uid="uid://b7g634dusywqh" path="res://assets/Yggdrasil.png" id="1_pakqn"]
[ext_resource type="Script" path="res://scenes/UI/save_slot.gd" id="1_yjvtv"]
[ext_resource type="Texture2D" uid="uid://d24wgfldcwbjc" path="res://assets/Vanaheim.png" id="2_422ld"]

[node name="SaveSlot" type="PanelContainer"]
script = ExtResource("1_yjvtv")

[node name="TextureRect" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
texture_normal = ExtResource("1_pakqn")
texture_pressed = ExtResource("2_422ld")
ignore_texture_size = true
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -65.5
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label5" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Save 1"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "11/05/2024"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[connection signal="pressed" from="TextureRect" to="." method="_on_texture_rect_pressed"]
